--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="#">Experience</a>
                 <a href="#">Work</a>
                 <a href="#">Portfolio</a>
+                <a href="#">Review</a>
                 <a href="#">Contact</a>
             </div>
         </section>
@@ -37,7 +38,25 @@
             <div class="half-width">
                 <h2>ABOUT</h2>
                 <p>My name is Md. Zakir Hossain Bhuiyan. I am continuing my study in East West University in department of Computer Science and Engineering(CSE). I have lot of experience of my subject. Looking for a challenging role in a reputable organization to utilize my technical, database, and management skills for the growth of the organization as well as to enhance my knowledge about new and emerging trends in the IT sector.</p>
-                <a href="https://www.linkedin.com/in/zakir-hossain-tuhin-7a7271203/" target="_blank">Download Resume</a>
+                <a href="https://mdzakirhossainbhuiyan.github.io/curriculum-vitae-CV-/" target="_blank">Download Resume</a>
+            </div>
+        </section>
+        <section class="working-project-area">
+            <h2 class="section-header"><span class="text-highlight">LATEST</span> WORING PROJECT</h2>
+            <div class="third-width working-project-style">
+                <img src="images/working-project-1.png" alt="project1">
+                <h3>Power-x-gym (gym website)</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reiciendis amet, est tempora eaque excepturi.</p>
+            </div>
+            <div class="third-width working-project-style">
+                <img src="images/working-project-2.png" alt="project1">
+                <h3>Creative Agency</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reiciendis amet, est tempora eaque excepturi.</p>
+            </div>
+            <div class="third-width working-project-style">
+                <img src="images/working-project-3.png" alt="project1">
+                <h3>Hard Rock Music</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reiciendis amet, est tempora eaque excepturi.</p>
             </div>
         </section>
         <section class="experience-area">
@@ -53,8 +72,42 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sequi, similique dolores inventore aliquid corporis repudiandae id ipsa vitae nulla necessitatibus voluptates non, dolor quibusdam dolorum ipsam perferendis officiis ullam quisquam itaque. Dolorum facilis optio porro minus labore et maiores.</p>
             </div>
         </section>
-        <section class="working-project">
-            <h2 class="section-header"><span class="text-highlight">LATEST</span> WORING PROJECT</h2>
+        <section class="customer-review">
+            <h2 class="section-header">Customer Reviews</h2>
+            <div class="third-width">
+                <img src="images/customer1.png" alt="customer1">
+                <h3>Ben Stock</h3>
+                <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit sint similique voluptate repellat vero error quidem provident id vitae sed!"</p>
+            </div>
+            <div class="third-width">
+                <img src="images/customer2.jpg" alt="customer2">
+                <h3>Nicola Carey</h3>
+                <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit sint similique voluptate repellat vero error quidem provident id vitae sed!"</p>
+            </div>
+            <div class="third-width">
+                <img src="images/customer3.jpeg" alt="customer1">
+                <h3>Jess Jonassen</h3>
+                <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit sint similique voluptate repellat vero error quidem provident id vitae sed!"</p>
+            </div>
         </section>
+        <section class="inquiry-area">
+            <div id="inquiry">
+                <h2>WORK INQUIRY <span id="chat-button"><a href="https://www.facebook.com/zakir.hossain065/" target="_blank">Let's Chat</a></span></h2>
+            </div>
+        </section>
+        <section id="contact-area">
+            <div id="contact">
+                <h3>STAY CONNECTED</h3>
+                <h2>zakirhossaintuhin@gmail.com</h2>
+            </div>
+            <div id="contact-img-div">
+                <img class="contact-img" src="images/Group 33059.png" alt="">
+                <img class="contact-img" src="images/image 6.png" alt="">
+                <img class="contact-img" src="images/image 7.png" alt="">
+            </div>
+        </section>
+        <footer>
+            <p>@ Zakir 2021, all rights reserved.</p>
+        </footer>
     </body>
 </html>
